small fixes and tidy-ups

--- a/notebooks/Maps_generalised.ipynb
+++ b/notebooks/Maps_generalised.ipynb
@@ -97,9 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_map_string_list,divergent_map_list = mapf.get_map_string_lists()\n",
-    "\n",
-    "variable_symbol_dict, variable_units_dict = mapf.get_position_symbols_and_units_dict(zabs=zabs, degree_symbol=degree_symbol)"
+    "full_map_string_list,divergent_map_list = mapf.get_map_string_lists()"
    ]
   },
   {
@@ -220,6 +218,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "variable_symbol_dict, variable_units_dict = mapf.get_position_symbols_and_units_dict(zabs=zabs, degree_symbol=degree_symbol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_map_limits(map_string, map_array, norm_index=slice(None), raw=False):\n",
     "    \"\"\"\n",
     "    Params\n",
@@ -276,8 +283,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_xy_max = 9\n",
-    "_xy_bins = 36\n",
+    "_xy_max = 3.5\n",
+    "_xy_bins = round(2*_xy_max * 20/6)\n",
     "\n",
     "_z_max = 3\n",
     "_z_bins = 11\n",
@@ -288,7 +295,7 @@
     "_lat_max = 13\n",
     "_b_bins = 10\n",
     "\n",
-    "_xyz_tick_step = 3"
+    "_xyz_tick_step = 1"
    ]
   },
   {
@@ -369,20 +376,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is here so you can choose one of the equal-n observational data limits in latitude.\n",
-    "    \n",
-    "data_trim = data[data[\"FeH\"]>=-1]\n",
+    "# Calculate equal-n observational data limits in latitude.\n",
     "\n",
-    "b_min_range,b_max_range = PH.get_equal_n_minmax_b_ranges(data_trim)\n",
+    "try:\n",
+    "    data_trim = data[data[\"FeH\"]>=-1]\n",
     "\n",
-    "b_index = 1\n",
+    "    b_min_range,b_max_range = PH.get_equal_n_minmax_b_ranges(data_trim)\n",
     "\n",
-    "bmin,bmax = MF.return_int_or_dec(b_min_range[b_index],2), MF.return_int_or_dec(b_max_range[b_index],2)\n",
+    "    b_index = 1\n",
     "\n",
-    "zmin,zmax = MF.return_int_or_dec(coordinates.ang_to_rect_1D(ang=bmin,x=R0), 2), MF.return_int_or_dec(coordinates.ang_to_rect_1D(ang=bmax,x=R0), 2)\n",
+    "    bmin,bmax = MF.return_int_or_dec(b_min_range[b_index],2), MF.return_int_or_dec(b_max_range[b_index],2)\n",
     "\n",
-    "print(bmin,bmax)\n",
-    "print(zmin,zmax)"
+    "    zmin,zmax = MF.return_int_or_dec(coordinates.ang_to_rect_1D(ang=bmin,x=R0), 2), MF.return_int_or_dec(coordinates.ang_to_rect_1D(ang=bmax,x=R0), 2)\n",
+    "\n",
+    "    print(bmin,bmax)\n",
+    "    print(zmin,zmax)\n",
+    "except NameError:\n",
+    "    print(\"Load the data first if you want to compute latitude limits according to it.\")"
    ]
   },
   {
@@ -392,19 +402,19 @@
    "outputs": [],
    "source": [
     "extra_variable_min_dict = {\n",
-    "    \"b\" : bmin,\n",
+    "#     \"b\" : bmin,\n",
     "    \"d\" : 5,\n",
     "    \"y\" : -_xy_max,\n",
     "    \"x\" : -_xy_max,\n",
-    "    \"z\" : zmin,\n",
+    "    \"z\" : 0.5,\n",
     "    \"R\" : 0,\n",
     "}\n",
     "extra_variable_max_dict = {\n",
-    "    \"b\" : bmax,\n",
+    "#     \"b\" : bmax,\n",
     "    \"d\" : 11,\n",
     "    \"y\" : _xy_max,\n",
     "    \"x\" : _xy_max,\n",
-    "    \"z\" : zmax,\n",
+    "    \"z\" : _z_max,\n",
     "    \"R\" : 3.5\n",
     "}\n",
     "extra_variable_map = {\n",
@@ -428,8 +438,8 @@
     "x_variable = \"x\" #d #l\n",
     "y_variable = \"y\"\n",
     "\n",
-    "vel_x_variable = \"r\"\n",
-    "vel_y_variable = \"l\" # Note phi should be given as \\phi\n",
+    "vel_x_variable = \"R\"\n",
+    "vel_y_variable = \"\\phi\" # Note phi should be given as \\phi\n",
     "\n",
     "extra_variable = extra_variable_map[x_variable+y_variable]"
    ]
@@ -442,7 +452,7 @@
    "source": [
     "min_star_number = 50\n",
     "\n",
-    "bootstrapconfig = BootstrapConfig(from_mean=False,symmetric=True,repeats=1000)"
+    "bootstrapconfig = BootstrapConfig(symmetric=True,repeats=500)"
    ]
   },
   {
@@ -503,8 +513,8 @@
     "x_label = variable_symbol_dict[x_variable] + r' $[\\mathrm{%s}]$'%x_units\n",
     "y_label = variable_symbol_dict[y_variable] + r' $[\\mathrm{%s}]$'%y_units\n",
     "\n",
-    "x_ticks = mapf.get_map_tick_range(x_min,x_max,map_tick_step[x_variable])\n",
-    "y_ticks = mapf.get_map_tick_range(y_min,y_max,map_tick_step[y_variable])\n",
+    "x_ticks = mapf.get_map_tick_range(x_min,x_max,map_tick_step[x_variable],include_lims=False)\n",
+    "y_ticks = mapf.get_map_tick_range(y_min,y_max,map_tick_step[y_variable],include_lims=False)\n",
     "\n",
     "x_minor_ticks = np.arange(x_min, x_max, np.diff(x_ticks)[0]/4)\n",
     "y_minor_ticks = np.arange(y_min, y_max, np.diff(y_ticks)[0]/4)\n",
@@ -717,6 +727,9 @@
     "save_path += f\"min_{min_star_number}_stars/\"\n",
     "MF.create_dir(save_path)\n",
     "\n",
+    "save_path += f\"boot_repeats_{bootstrapconfig.repeats}/\"\n",
+    "MF.create_dir(save_path)\n",
+    "\n",
     "print(\"Saving in\",save_path)"
    ]
   },
@@ -729,14 +742,14 @@
     "save_bool = True\n",
     "# save_bool = False\n",
     "\n",
+    "plt.rcParams[\"font.size\"]=17\n",
+    "\n",
     "if young_and_old: # check number of stars\n",
     "    \n",
     "    df_ages = [\n",
     "        MF.apply_cuts_to_df(df_extra,{\"age\": [age_min,young_max]}),\n",
     "        MF.apply_cuts_to_df(df_extra,{\"age\": [old_min,old_max]})\n",
     "    ]\n",
-    "\n",
-    "    plt.rcParams[\"font.size\"]=21\n",
     "\n",
     "    cmap = mplcmaps[\"viridis\"]\n",
     "    # cmap = PH.get_reds_cmap()\n",
@@ -835,7 +848,7 @@
     "    \n",
     "    for y_index, y in enumerate(y_range):\n",
     "        min_y,max_y = np.min([y,y+y_step]), np.max([y,y+y_step])\n",
-    "        print(f\"{y_variable+': ' if y_index==0 else ''}{min_y:.2f},{max_y:.2f}\",end=\"; \" if y_index!=len(y_range)-1 else \"\\n\")\n",
+    "        print(f\"{y_variable+': ' if y_index==0 else ''}{min_y:.2f},{max_y:.2f}\",end=\"; \" if y_index!=len(y_range)-1 else \"\\n\\n\")\n",
     "        \n",
     "        include_lims = \"both\" if y_index==len(y_range)-1 else \"min\"\n",
     "        df_y = MF.apply_cuts_to_df(df_age, cuts_dict={y_variable:[min_y,max_y]}, lims_dict={y_variable:include_lims})\n",
@@ -1258,13 +1271,13 @@
     "#                     return [-160,-130,-100,-70,-30,0,30,70,100,130,160]\n",
     "#                     return [-150,-120,-90,-60,-30,0,30,60,90,120,150]\n",
     "                    return [-130,-110,-80,-50,-20,0,20,50,80,110,140]\n",
-    "                if map_variable == \"anisotropy_error\":\n",
+    "                if \"anisotropy_error\" in map_variable:\n",
     "#                     return [0,0.05,0.10,0.15,0.2,0.25]\n",
     "                    return [0,0.1,0.2,0.3,0.4,0.5,0.6,0.7]\n",
-    "                if map_variable == \"correlation_error\":\n",
+    "                if \"correlation_error\" in map_variable:\n",
     "#                     return [0,0.03,0.05,0.07,0.09,0.11,0.13]\n",
     "                    return [0,0.04,0.08,0.12,0.16,0.2,0.24]\n",
-    "                if map_variable == \"tilt_abs_error\":\n",
+    "                if \"tilt_abs_error\" in map_variable:\n",
     "                    return [0,5,10,15,20,25,30]\n",
     "            if x_variable+y_variable==\"lb\":\n",
     "                if map_variable == \"anisotropy\":\n",
@@ -1308,11 +1321,11 @@
     "#                         return [-0.3,-0.2,-0.1,-0.05,0.05,0.1,0.2,0.3]\n",
     "                if map_variable == \"anisotropy\":\n",
     "                    return [-0.4,-0.2,-0.1,0.1,0.2,0.4,0.6,0.8]\n",
-    "                if map_variable == \"anisotropy_error\":\n",
+    "                if \"anisotropy_error\" in map_variable:\n",
     "                    return [0,0.04,0.08,0.12,0.16,0.20]\n",
-    "                if map_variable == \"correlation_error\":\n",
+    "                if \"correlation_error\" in map_variable:\n",
     "                    return [0,0.03,0.06,0.09,0.12,0.14]\n",
-    "                if map_variable == \"tilt_abs_error\":\n",
+    "                if \"tilt_abs_error\" in map_variable:\n",
     "                    return [0,5,10,15,20,25,30]\n",
     "\n",
     "        if map_variable in ['vertex_abs','tilt_abs']: return [-45,-40,-30,-20,-10,10,20,30,40,45]\n",
@@ -1825,8 +1838,9 @@
     "if manual_contour_bool:\n",
     "    if x_variable+y_variable == \"xy\":\n",
     "#         density_contour_levels = [ 3500, 8700, 14000, 82000 ]\n",
+    "        density_contour_levels = [ 3000, 6000, 9500, 19000, 83000 ]\n",
     "#         density_contour_levels = [ 700,1000,3500, 5000 ]\n",
-    "        density_contour_levels = [ 500, 1000, 3000, 5000, 10000]\n",
+    "#         density_contour_levels = [ 500, 1000, 3000, 5000, 10000]\n",
     "    if x_variable+y_variable == \"yz\":\n",
     "        density_contour_levels = [ 3000, 10000, 30000, 300000 ]\n",
     "    if x_variable+y_variable == \"lb\":\n",
@@ -2444,11 +2458,13 @@
    "source": [
     "# CHOOSE\n",
     "\n",
-    "# doublemap_variable_list = [[\"anisotropy\",\"correlation\",\"tilt_abs\"], [\"anisotropy_error_high\",\"correlation_error_high\",\"tilt_abs_error_high\"]]\n",
-    "doublemap_variable_list = [[\"mean_vx\",\"mean_vy\"],[\"std_vx\",\"std_vy\"]]\n",
+    "# doublemap_variable_list = [[\"anisotropy\",\"correlation\",\"tilt_abs\"], [\"anisotropy_error_high\",\"correlation_error_high\",\"tilt_abs_error_high\"]]; doublemap_name = \"anicorrtilt\"\n",
+    "doublemap_variable_list = [[\"mean_vx\",\"mean_vy\"],[\"std_vx\",\"std_vy\"]]; doublemap_name = \"meanstd\"\n",
     "\n",
     "left_maps = doublemap_variable_list[0]\n",
-    "right_maps = doublemap_variable_list[1]"
+    "right_maps = doublemap_variable_list[1]\n",
+    "\n",
+    "n_rows = len(left_maps)"
    ]
   },
   {
@@ -2484,6 +2500,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ang_label_xshift_dict = {\n",
+    "    3: 0.3,\n",
+    "    3.5: 0.55,\n",
+    "    4: 7.2,\n",
+    "    9: 15\n",
+    "}\n",
+    "\n",
+    "ang_label_y_factor = 1.13\n",
+    "\n",
+    "radii_label_xshift_dict = {\n",
+    "    3: -0.31,\n",
+    "    3.5: -0.42 if n_rows == 3 else -0.4,\n",
+    "    4: -0.45,\n",
+    "    9: -0.5\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sharing_cbar_bool = True\n",
+    "sharing_cbar_bool = False\n",
+    "\n",
     "# heatmap = True\n",
     "heatmap = False"
    ]
@@ -2530,14 +2572,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sharing_cbar_bool = True\n",
-    "sharing_cbar_bool = False\n",
+    "# aspect_equal = True\n",
+    "aspect_equal = False\n",
     "\n",
-    "aspect_equal = True\n",
-    "# aspect_equal = False\n",
-    "\n",
-    "# save_bool = True\n",
-    "save_bool = False"
+    "save_bool = True\n",
+    "# save_bool = False"
    ]
   },
   {
@@ -2549,7 +2588,6 @@
     "# double map plot\n",
     "\n",
     "if True: # define fig and axes\n",
-    "    n_rows = len(left_maps)\n",
     "    n_cols = 7\n",
     "    \n",
     "    fig_size, fig_aspect_ratio, central_space, cbar_width, cbar_ticksize = get_doublemap_gridspec_params(x_variable+y_variable, n_rows)\n",
@@ -2575,7 +2613,8 @@
     "        \n",
     "        if not heatmap: # contour levels\n",
     "            if contour_number is None: # extend and cmap\n",
-    "                levels = get_levels(map_variable,vmin,vmax)\n",
+    "                levels = get_levels(map_variable,vmin,vmax,verbose=True)\n",
+    "                \n",
     "                cbar_extend = PH.get_cbar_extend(min(levels),max(levels),vmin,vmax)\n",
     "                colors, cmap = get_colors_and_cmap(levels, map_variable, cbar_extend)\n",
     "            else:\n",
@@ -2589,25 +2628,27 @@
     "            cmap = PH.choose_cmap(vmin,vmax)\n",
     "            cbar_extend = PH.get_cbar_extend(vmin,vmax,np.nanmin(map_dict[map_variable]),np.nanmax(map_dict[map_variable]))\n",
     "        \n",
-    "        for col in range(len(age_range_min)):\n",
+    "        for col in range(len(age_range_min)): # title, plot, density, lines, ticks, lims\n",
     "\n",
     "            ax = axes[block][row][col]\n",
     "            \n",
-    "            if row == 0: ax.set_title(titles[col])\n",
+    "            if row == 0: \n",
+    "                ax.set_title(titles[col])\n",
     "            \n",
-    "            smoothed_array = gaussian_filter(map_dict[map_variable][col], map_contours_sigma)\n",
-    "            zero_cont = ax.contour(smoothed_array,extent=extent,levels=[0],colors='black',linewidths=zero_contour_lw)\n",
-    "            \n",
-    "            if heatmap:\n",
-    "                mappable = ax.imshow(map_dict[map_variable][col],extent=extent,cmap=cmap,norm=norm,origin=\"lower\")\n",
-    "            else:\n",
-    "                mappable = ax.contourf(smoothed_array,extent=extent,colors=colors,cmap=cmap,extend=cbar_extend,levels=levels)#,norm=norm)\n",
+    "            if True: # plot\n",
+    "                smoothed_array = gaussian_filter(map_dict[map_variable][col], map_contours_sigma)\n",
+    "                zero_cont = ax.contour(smoothed_array,extent=extent,levels=[0],colors='black',linewidths=zero_contour_lw)\n",
+    "\n",
+    "                if heatmap:\n",
+    "                    mappable = ax.imshow(map_dict[map_variable][col],extent=extent,cmap=cmap,norm=norm,origin=\"lower\")\n",
+    "                else:\n",
+    "                    mappable = ax.contourf(smoothed_array,extent=extent,colors=colors,cmap=cmap,extend=cbar_extend,levels=levels)#,norm=norm)\n",
     "\n",
     "            if density_contours_on: # density contour\n",
     "                ax.contour(count_list[col]/(stellar_mass if mass_density_bool else 1), extent=extent, levels=density_contour_levels,\n",
     "                           colors=density_contour_color, linewidths=density_contour_lw)\n",
     "            \n",
-    "            if plotting_lines_bool:\n",
+    "            if plotting_lines_bool: # lines\n",
     "                highlight_factor = 3\n",
     "                line_colour = \"w\"\n",
     "                line_label_colour = \"w\"\n",
@@ -2630,16 +2671,11 @@
     "                    if plotting_line_labels and ang in angle_label_vals:\n",
     "                        neg_shift = 0.15 if ang < 0 else 0\n",
     "                        \n",
-    "                        pos_shift_dict = {\n",
-    "                            3: 0.3,\n",
-    "                            3.5: 0.55,\n",
-    "                            9: 15\n",
-    "                        }\n",
-    "                        pos_shift = pos_shift_dict[x_max]\n",
+    "                        pos_shift = ang_label_xshift_dict[x_max]\n",
     "                        \n",
     "                        ang_label_x = (abs(sun_coords[0])-x_max+pos_shift)*np.cos(np.radians(ang))-abs(sun_coords[0])-neg_shift\n",
     "\n",
-    "                        ax.text(x=ang_label_x,y=(ang_label_x+abs(sun_coords[0]))*np.tan(np.radians(ang))*1.1,\\\n",
+    "                        ax.text(x=ang_label_x,y=(ang_label_x+abs(sun_coords[0]))*np.tan(np.radians(ang))*ang_label_y_factor,\\\n",
     "                                        s=fr\"${ang}^\\circ$\",color=line_label_colour,rotation=ang,size=line_label_fontsize)\n",
     "\n",
     "                for radius in radii_list:\n",
@@ -2661,13 +2697,9 @@
     "                        slope = -x_intersect / np.sqrt(radius**2 - x_intersect**2)\n",
     "                        rot = -np.degrees(np.arctan(slope))\n",
     "                        \n",
-    "                        x_shift_dict = {\n",
-    "                            3: -0.31,\n",
-    "                            3.5: -0.4,\n",
-    "                            9: -0.5\n",
-    "                        }\n",
+    "                        radii_label_x = x_intersect-abs(sun_coords[0])+radii_label_xshift_dict[x_max]\n",
     "                        \n",
-    "                        ax.text(x=x_intersect-abs(sun_coords[0])+x_shift_dict[x_max],y=low_y,s=fr\"${radius}$ kpc\",color=line_label_colour,rotation=rot,size=line_label_fontsize)\n",
+    "                        ax.text(x=radii_label_x,y=low_y,s=fr\"${radius}$ kpc\",color=line_label_colour,rotation=rot,size=line_label_fontsize)\n",
     "            \n",
     "            if True: # ticks, lims\n",
     "                ax.xaxis.set_minor_locator(ticker.MultipleLocator(x_minor_locator))\n",
@@ -2693,7 +2725,9 @@
     "\n",
     "                ax.set_xlim(x_left,x_right)\n",
     "                ax.set_ylim(y_min,y_max)\n",
-    "                if aspect_equal: ax.set_aspect('equal')\n",
+    "                \n",
+    "                if aspect_equal: \n",
+    "                    ax.set_aspect('equal')\n",
     "\n",
     "        if True: # cbar\n",
     "            cbar_ax = axes_cbar[block][row]\n",
@@ -2704,7 +2738,7 @@
     "            else:\n",
     "                cbar = fig.colorbar(mappable, cax=cbar_ax, extendfrac='auto', spacing=cbar_spacing)\n",
     "            \n",
-    "            cbar.set_label(kinematic_symbols_dict[map_variable] + r\" $[\\mathrm{%s}]$\"%kinematic_units_dict[map_variable])\n",
+    "            cbar.set_label(mapf.get_kinematic_label(map_string=map_variable,kinematic_symbol_dict=kinematic_symbols_dict,kinematic_units_dict=kinematic_units_dict))\n",
     "\n",
     "            if not heatmap: # cbar ticks\n",
     "                cbar_ax.tick_params(length=cbar_ticksize)\n",
@@ -2762,11 +2796,11 @@
     "if True: # filename, save\n",
     "    fig.align_labels()\n",
     "    \n",
-    "    maps_string = f\"_{left_maps[0]}_{left_maps[1]}\"\n",
+    "    maps_string = doublemap_name\n",
     "    maps_string += \"_fractionalerrors\" if any(\"fractionalerror\" in rightmap for rightmap in right_maps) else \"\"\n",
     "    maps_string += \"_sharing\" if sharing_cbar_bool and mapf.any_map_pair_is_shared(doublemap_variable_list, shared_cbar_variables) else \"\"\n",
     "    \n",
-    "    filename = f\"{x_variable}{y_variable}_doublemap{maps_string}\"\n",
+    "    filename = f\"doublemap_{maps_string}\"\n",
     "    \n",
     "    if not heatmap and contour_number is not None:\n",
     "        filename += f\"_{contour_number}contourN\"\n",
