allow non-scipy boot error in MC plot

--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -226,10 +226,19 @@
     "# sim_choice = \"708mainDiff5\"\n",
     "\n",
     "rot_angle = 27\n",
-    "axisymmetric = True\n",
+    "axisymmetric = False\n",
     "pos_scaling = 1.7\n",
     "\n",
-    "filename = load_sim.build_filename(choice=sim_choice,rot_angle=rot_angle,R0=R0,axisymmetric=axisymmetric,zabs=zabs,pos_factor=pos_scaling,GSR=GSR)"
+    "filename = load_sim.build_filename(choice=sim_choice,rot_angle=rot_angle,R0=R0,axisymmetric=axisymmetric,zabs=zabs,pos_factor=pos_scaling,GSR=GSR)\n",
+    "\n",
+    "if True: # highlight non-standard settings\n",
+    "    if sim_choice != \"708main\":\n",
+    "        print(sim_choice)\n",
+    "    \n",
+    "    if axisymmetric:\n",
+    "        print(\"axisymmetric\")\n",
+    "    elif rot_angle != 27:\n",
+    "        print(f\"Rot angle {rot_angle}\")"
    ]
   },
   {
@@ -844,8 +853,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# func_list = [\"anisotropy\", \"correlation\", \"tilt_abs\"]; func_prefix = \"anicorr\"\n",
-    "func_list = [\"mean_vx\",\"mean_vy\",\"std_vx\",\"std_vy\",\"anisotropy\", \"correlation\", \"tilt_abs\"]; func_prefix = \"all\""
+    "func_list = [\"anisotropy\", \"correlation\", \"tilt_abs\"]; func_prefix = \"anicorr\"\n",
+    "# func_list = [\"mean_vx\",\"mean_vy\",\"std_vx\",\"std_vy\",\"anisotropy\", \"correlation\", \"tilt_abs\"]; func_prefix = \"all\""
    ]
   },
   {
@@ -881,9 +890,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repeats = 100\n",
+    "repeats = 500\n",
     "\n",
-    "boot_CI_level = 68"
+    "boot_CI_level = 68\n",
+    "\n",
+    "# scipy = True\n",
+    "scipy = False"
    ]
   },
   {
@@ -911,8 +923,11 @@
     "    \n",
     "        true_values[a,f] = error_helpers.apply_function(function=func,vx=vx,vy=vy,R_hat=R_hat,tilt=tilt,absolute=absolute)\n",
     "        \n",
-    "        boot_res = bootstrap.scipy_bootstrap(function=func,vx=vx,vy=vy,repeats=repeats,tilt=tilt,absolute=absolute,R_hat=R_hat,\n",
+    "        if scipy:\n",
+    "            boot_res = bootstrap.scipy_bootstrap(function=func,vx=vx,vy=vy,repeats=repeats,tilt=tilt,absolute=absolute,R_hat=R_hat,\n",
     "                                             confidence_level=boot_CI_level/100)\n",
+    "        else:\n",
+    "            boot_res = bootstrap.get_std_bootstrap(function=func,vx=vx,vy=vy,tilt=tilt,absolute=absolute,R_hat=R_hat,config=BootstrapConfig(repeats=repeats,symmetric=False))\n",
     "        \n",
     "        boot_CIs[a,f] = boot_res.confidence_interval\n",
     "        \n",
@@ -1020,10 +1035,13 @@
     "            \n",
     "            if PH.shall_plot_zero_line(minima=all_MC_results[col,row,f].min(), maxima=all_MC_results[col,row,f].max()):\n",
     "                ax.axhline(y=0,color=\"grey\",linestyle=\"dotted\")\n",
-    "                \n",
     "\n",
     "            if show_boot_CI:\n",
     "                CI_low,CI_high = boot_CIs[col,row]\n",
+    "                if not scipy:\n",
+    "                    CI_low = true_value - CI_low\n",
+    "                    CI_high = true_value + CI_high\n",
+    "                \n",
     "                ax.fill_between(x=ax.get_xlim(),y1=CI_low,y2=CI_high,color=\"grey\",alpha=0.15,label=f\"{boot_CI_level}% bootstrap CI\")\n",
     "\n",
     "        if True: # axis, title, legend\n",
@@ -1055,7 +1073,7 @@
     "    filename += \"_\" + MF.combine_multiple_cut_dicts_into_str(pop_cuts_list)\n",
     "    filename += \"_\" + MF.combine_multiple_cut_dicts_into_str([spatial_cuts,affected_cut],order_separator=\"_\")\n",
     "    filename += f\"_{repeats}repeats\"\n",
-    "    filename += f\"_boot{boot_CI_level}CI\"\n",
+    "    filename += f\"_boot{boot_CI_level}CI\" + (\"scipy\" if scipy else \"\")\n",
     "    filename += \"_boxcolor\" if colors_bool else \"\"\n",
     "    \n",
     "    print(filename)\n",
