enable other statistics on the apogee windows

--- a/notebooks/Visualisation.ipynb
+++ b/notebooks/Visualisation.ipynb
@@ -43,7 +43,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy import stats"
    ]
   },
   {
@@ -53,7 +54,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.colors import LogNorm\n",
+    "from matplotlib.colors import LogNorm, Normalize\n",
     "import matplotlib.ticker as ticker\n",
     "from matplotlib import colormaps as mplcmaps\n",
     "import matplotlib.cm as cm\n",
@@ -116,13 +117,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Sim"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -135,6 +129,13 @@
     "\n",
     "GSR = True\n",
     "# GSR = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sim"
    ]
   },
   {
@@ -197,6 +198,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_trim = data[data[\"FeH\"]>-1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -209,11 +219,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim_bool = True\n",
-    "# sim_bool = False\n",
+    "# sim_bool = True\n",
+    "sim_bool = False\n",
     "\n",
-    "# data_bool = True\n",
-    "data_bool = False"
+    "data_bool = True\n",
+    "# data_bool = False"
    ]
   },
   {
@@ -2530,11 +2540,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bulge_bool = False\n",
-    "drawlims_bool = False\n",
-    "\n",
     "n_bin = 70\n",
     "\n",
+    "cmap = 'viridis'\n",
+    "\n",
+    "bulge_bool = False\n",
+    "drawlims_bool = False\n",
     "cut_lw = 0.75"
    ]
   },
@@ -2544,45 +2555,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Generate histograms\n",
+    "# statistic = \"mean\"\n",
+    "statistic = \"median\"\n",
+    "# statistic = \"count\"\n",
     "\n",
-    "fig, axs = plt.subplots(nrows=2,ncols=2,figsize=(10,10),gridspec_kw={'wspace':0.3,'hspace':-0.43})#,'width_ratios':[1,1],'height_ratios':[2,1]})#[[1,1],[1,0.5]]\n",
+    "var = \"FeH\" # non-count statistics will be based on this var's values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cbar_label = {\n",
+    "    \"count\": r\"$N$\",\n",
+    "    \"mean\": r\"$\\langle [$Fe/H$]\\rangle$\",\n",
+    "    \"median\": \"Med([Fe/H])\",\n",
+    "}[statistic]\n",
     "\n",
-    "axs = np.ravel(axs)\n",
+    "cbar_labelpad = {\n",
+    "    \"count\": -380,\n",
+    "    \"mean\": -410,\n",
+    "    \"median\": -425,\n",
+    "}[statistic]\n",
     "\n",
-    "cmap = 'viridis'\n",
-    "\n",
+    "if statistic == \"count\":\n",
+    "    df = data\n",
+    "    values = None\n",
+    "else:\n",
+    "    df = data_trim if var == \"FeH\" else data\n",
+    "    values = df[var]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "l_bins = n_bin\n",
-    "b_bins_lb = int(l_bins*(max_b-min_b)/(max_l-min_l))\n",
-    "h1 = axs[i_lb].hist2d(data['l'],data['b'],bins=[l_bins,b_bins_lb],cmap=cmap,norm=LogNorm())\n",
-    "axs[i_lb].set_xlabel(r'$l$ [%s]'%degree_symbol);axs[i_lb].set_ylabel(r'$|b|$ [%s]'%degree_symbol)\n",
-    "axs[i_lb].set_xticks(np.arange(-10,10+2,2));axs[i_lb].set_xticks(np.arange(-10,10+1,1),minor=True);\n",
-    "axs[i_lb].set_yticks(np.arange(0,int(max_b)+2,2));axs[i_lb].set_yticks(np.arange(0,max_b+1,1),minor=True);\n",
-    "axs[i_lb].set_xlim(data['l'].max(),data['l'].min())\n",
+    "b_bins_lb = int(l_bins * (max_b - min_b) / (max_l - min_l))\n",
+    "h1, _,_,_ = stats.binned_statistic_2d(df['l'], df['b'], values, bins=[l_bins, b_bins_lb], statistic=statistic)\n",
     "\n",
     "d_bins = n_bin\n",
     "db_aspect = 0.325\n",
-    "b_bins_db = int(d_bins*db_aspect*(max_b-min_b)/(max_d-min_d))\n",
-    "h2 = axs[i_db].hist2d(data['d'],data['b'],bins=[d_bins,b_bins_db],cmap=cmap,norm=LogNorm())\n",
-    "axs[i_db].set_xlabel(r'$d$ [kpc]');axs[i_db].set_ylabel(r'$|b|$ [%s]'%degree_symbol);axs[i_db].set_yticks([0,5,10]);axs[i_db].set_yticks([0,5,10])\n",
-    "axs[i_db].set_aspect(db_aspect)\n",
+    "b_bins_db = int(d_bins * db_aspect * (max_b - min_b) / (max_d - min_d))\n",
+    "h2, _,_,_ = stats.binned_statistic_2d(df['d'], df['b'], values, bins=[d_bins, b_bins_db], statistic=statistic)\n",
     "\n",
     "x_bins = n_bin\n",
-    "y_bins = int(x_bins*(max_y-min_y)/(max_x-min_x))\n",
-    "h3 = axs[i_xy].hist2d(data['x'],data['y'],bins=[x_bins,y_bins],cmap=cmap,norm=LogNorm())\n",
-    "axs[i_xy].set_xlabel(r'$x$ [kpc]');axs[i_xy].set_ylabel(r'$y$ [kpc]');axs[i_xy].set_xticks([-3,-2,-1,0,1,2,3]);axs[i_xy].set_yticks([-2,-1,0,1,2])\n",
+    "y_bins = int(x_bins * (max_y - min_y) / (max_x - min_x))\n",
+    "h3, _,_,_ = stats.binned_statistic_2d(df['x'], df['y'], values, bins=[x_bins, y_bins], statistic=statistic)\n",
     "\n",
-    "x_bins = n_bin\n",
-    "z_bins = int(x_bins*(max_z-min_z)/(max_x-min_x))\n",
-    "h4 = axs[i_xz].hist2d(data['x'],data['z'],bins=[x_bins,z_bins],cmap=cmap,norm=LogNorm())\n",
-    "axs[i_xz].set_xlabel(r'$x$ [kpc]');axs[i_xz].set_ylabel(r'$|z|$ [kpc]');axs[i_xz].set_xticks([-3,-2,-1,0,1,2,3]);axs[i_xz].set_yticks([0,1,2])\n",
+    "z_bins = int(x_bins * (max_z - min_z) / (max_x - min_x))\n",
+    "h4, _,_,_ = stats.binned_statistic_2d(df['x'], df['z'], values, bins=[x_bins, z_bins], statistic=statistic)\n",
     "\n",
-    "for ax_index in [i_lb,i_xy,i_xz]:\n",
-    "    axs[ax_index].set_aspect('equal')\n",
-    "    \n",
-    "# plt.savefig(general_path+'apogee_windows.png',bbox_inches='tight', dpi=150)\n",
-    "# print(general_path+'apogee_windows.png')\n",
-    "plt.close()"
+    "\n",
+    "if statistic == \"count\":\n",
+    "    vmax = np.max([np.max(h1),np.max(h2),np.max(h3),np.max(h4)])\n",
+    "    norm = LogNorm(vmax=vmax)\n",
+    "else:\n",
+    "    vmin = np.nanmin([np.nanmin(h1),np.nanmin(h2),np.nanmin(h3),np.nanmin(h4)])\n",
+    "    vmax = np.nanmax([np.nanmax(h1),np.nanmax(h2),np.nanmax(h3),np.nanmax(h4)])\n",
+    "    norm = Normalize(vmin=vmin, vmax=vmax)"
    ]
   },
   {
@@ -2591,17 +2626,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_bool = False\n",
+    "save_bool = True\n",
+    "# save_bool = False\n",
     "\n",
-    "save_path = general_path + '708main_simulation/graphs/Observations/Apogee/apogee_windows/'\n",
-    "\n",
-    "if True: #filename\n",
-    "    \n",
-    "    drawlims_string = '_drawlims' if drawlims_bool else ''\n",
-    "    bulge_string = '_bulge' if bulge_bool else ''\n",
-    "    \n",
-    "    filename = f\"apogee_windows_bin{n_bin}{drawlims_string}\"\n",
-    "    print(filename)"
+    "save_path = general_path + 'graphs/Observations/Apogee/apogee_windows/'"
    ]
   },
   {
@@ -2610,39 +2638,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot\n",
-    "\n",
-    "fig, axs = plt.subplots(nrows=2,ncols=2,figsize=(10,10),gridspec_kw={'wspace':0.3,'hspace':-0.38})#,'width_ratios':[1,1],'height_ratios':[2,1]})#[[1,1],[1,0.5]]\n",
-    "\n",
+    "fig, axs = plt.subplots(nrows=2, ncols=2, figsize=(10, 10), gridspec_kw={'wspace': 0.35, 'hspace': -0.38})\n",
     "axs = np.ravel(axs)\n",
     "\n",
-    "vmax = np.max([np.max(h1[0]),np.max(h2[0]),np.max(h3[0]),np.max(h4[0])])\n",
-    "cmap = 'viridis'\n",
-    "\n",
-    "norm = LogNorm(vmax=vmax)\n",
-    "\n",
-    "im1 = axs[i_lb].imshow(h1[0].T,cmap=cmap,extent=[min_l,max_l,min_b,max_b],origin='lower',norm=norm)\n",
-    "axs[i_lb].set_xlabel(r'$l$ [%s]'%degree_symbol);axs[i_lb].set_ylabel(r'$|b|$ [%s]'%degree_symbol)\n",
+    "# lb\n",
+    "im1 = axs[i_lb].imshow(h1.T,cmap=cmap,extent=[min_l,max_l,min_b,max_b],origin='lower',norm=norm)\n",
+    "axs[i_lb].set_xlabel(r'$l$ [$%s$]'%degree_symbol);axs[i_lb].set_ylabel(r'$|b|$ [$%s$]'%degree_symbol)\n",
     "axs[i_lb].set_xticks(np.arange(-9,9+3,3));axs[i_lb].set_xticks(np.arange(-10,10+1,1),minor=True);\n",
     "axs[i_lb].set_yticks(np.arange(0,int(max_b)+2,2));axs[i_lb].set_yticks(np.arange(0,max_b+0.5,0.5),minor=True);\n",
     "axs[i_lb].invert_xaxis()\n",
     "\n",
-    "im2 = axs[i_db].imshow(h2[0].T,cmap=cmap,extent=[min_d,max_d,min_b,max_b],origin='lower',norm=norm)\n",
-    "axs[i_db].set_xlabel(r'$d$ [kpc]');axs[i_db].set_ylabel(r'$|b|$ [%s]'%degree_symbol);axs[i_db].set_xticks(np.arange(4,12,0.25), minor=True);axs[i_db].set_xlim(min_d,max_d)\n",
+    "# db\n",
+    "im2 = axs[i_db].imshow(h2.T,cmap=cmap,extent=[min_d,max_d,min_b,max_b],origin='lower',norm=norm)\n",
+    "axs[i_db].set_xlabel(r'$d$ [kpc]');axs[i_db].set_ylabel(r'$|b|$ [$%s$]'%degree_symbol);axs[i_db].set_xticks(np.arange(4,12,0.25), minor=True);axs[i_db].set_xlim(min_d,max_d)\n",
     "axs[i_db].set_xticks(np.arange(5,11+1,1));axs[i_db].set_yticks(np.arange(0,int(max_b)+2,2));axs[i_db].set_yticks(np.arange(0,max_b+0.5,0.5),minor=True)#axs[i_db].set_yticks([0,5,10])\n",
     "axs[i_db].set_aspect(db_aspect)\n",
     "\n",
-    "im3 = axs[i_xy].imshow(h3[0].T,cmap=cmap,extent=[min_x,max_x,min_y,max_y],origin='lower',norm=norm)\n",
+    "# xy\n",
+    "im3 = axs[i_xy].imshow(h3.T,cmap=cmap,extent=[min_x,max_x,min_y,max_y],origin='lower',norm=norm)\n",
     "axs[i_xy].set_xlabel(r'$x$ [kpc]');axs[i_xy].set_ylabel(r'$y$ [kpc]');axs[i_xy].set_xticks([-3,-2,-1,0,1,2,3]);axs[i_xy].set_yticks([-2,-1,0,1,2])\n",
     "axs[i_xy].set_xticks(np.arange(-4,4,0.25), minor=True);axs[i_xy].set_yticks(np.arange(-3,3,0.25), minor=True)\n",
     "\n",
-    "im4 = axs[i_xz].imshow(h4[0].T,cmap=cmap,extent=[min_x,max_x,min_z,max_z],origin='lower',norm=norm)\n",
+    "# xz\n",
+    "im4 = axs[i_xz].imshow(h4.T,cmap=cmap,extent=[min_x,max_x,min_z,max_z],origin='lower',norm=norm)\n",
     "axs[i_xz].set_xlabel(r'$x$ [kpc]');axs[i_xz].set_ylabel(r'$|z|$ [kpc]');axs[i_xz].set_xticks([-3,-2,-1,0,1,2,3]);axs[i_xz].set_yticks([0,1,2])\n",
     "axs[i_xz].set_xticks(np.arange(-4,4,0.25), minor=True);axs[i_xz].set_yticks(np.arange(0,3,0.25), minor=True)\n",
     "\n",
-    "for ax_index in [i_lb,i_xy,i_xz]:\n",
+    "for ax_index in [0, 2, 3]:\n",
     "    axs[ax_index].set_aspect('equal')\n",
-    "\n",
+    "    \n",
     "if bulge_bool:\n",
     "    axs[i_lb].set_xlim(lmax,lmin);axs[i_lb].set_ylim(bmin,bmax)\n",
     "    axs[i_db].set_xlim(dmin,dmax);axs[i_lb].set_ylim(bmin,bmax)\n",
@@ -2653,43 +2677,37 @@
     "        xmin,xmax,ymin,ymax=minmax_dict[i]\n",
     "        axs[i].plot([xmin,xmin],[ymin,ymax],color='red',linewidth=cut_lw);axs[i].plot([xmax,xmax],[ymin,ymax],color='red',linewidth=cut_lw)\n",
     "        axs[i].plot([xmin,xmax],[ymin,ymin],color='red',linewidth=cut_lw);axs[i].plot([xmin,xmax],[ymax,ymax],color='red',linewidth=cut_lw)\n",
-    "        \n",
+    "    \n",
     "for i in [i_lb,i_db,i_xy,i_xz]:\n",
     "    xleft,xright,yleft,yright = lims_dict[i]\n",
     "    axs[i].set_xlim(xleft,xright);axs[i].set_ylim(yleft,yright)\n",
-    "    \n",
-    "cbar_ax = fig.add_axes([0.25, 0.8, 0.5, 0.05]) #left,bottom,width,height\n",
-    "fig.colorbar(im4, cax=cbar_ax,orientation='horizontal')\n",
-    "cbar_ax.tick_params(axis='x',which='both',top=True,bottom=False,labelbottom=False,labeltop=True,direction='in',color='white')\n",
-    "cbar_ax.tick_params(which='major',length=30,width=1);cbar_ax.tick_params(which='minor',length=20,width=1);cbar_ax.set_ylabel(r'$N$',rotation=0,labelpad=-380,y=0.3)\n",
-    "major_ticks,minor_ticks = np.array(cbar_ax.get_xticks()),np.array(cbar_ax.get_xticks(minor=True))\n",
-    "cbar_ax.set_xticklabels([str(i) for i in major_ticks.astype(int)])\n",
-    "cbar_ax.set_xticklabels([str(i) if '5' in str(i) else '' for i in minor_ticks.astype(int)], minor=True)\n",
     "\n",
-    "if save_bool:\n",
-    "    print(\"Saving:\",save_path+filename)\n",
-    "    for fileformat in [\".png\",\".pdf\"]:\n",
-    "        plt.savefig(save_path+filename+fileformat,bbox_inches='tight', dpi=200)\n",
-    "        print(fileformat)\n",
+    "if True: #cbar\n",
+    "    cbar_ax = fig.add_axes([0.25, 0.78, 0.5, 0.04]) #left,bottom,width,height\n",
+    "    fig.colorbar(im4, cax=cbar_ax,orientation='horizontal')\n",
+    "    cbar_ax.tick_params(axis='x',which='both',top=True,bottom=False,labelbottom=False,labeltop=True,direction='in',color='white')\n",
+    "    cbar_ax.tick_params(which='major',length=20,width=1);cbar_ax.tick_params(which='minor',length=10,width=1)\n",
+    "    cbar_ax.set_ylabel(cbar_label,rotation=0,labelpad=cbar_labelpad,y=0.15)\n",
+    "    # major_ticks,minor_ticks = np.array(cbar_ax.get_xticks()),np.array(cbar_ax.get_xticks(minor=True))\n",
+    "    # cbar_ax.set_xticks(ticks=major_ticks, labels=[str(i) for i in major_ticks.astype(int)])\n",
+    "    # cbar_ax.set_xticks(ticks=minor_ticks, labels=[str(i) if '5' in str(i) else '' for i in minor_ticks.astype(int)], minor=True)\n",
+    "    pass\n",
+    "\n",
+    "if True: # filename and save\n",
+    "    stat_string = f\"_{statistic}\" + (var if statistic != \"count\" else \"\")\n",
+    "    drawlims_string = '_drawlims' if drawlims_bool else ''\n",
+    "    bulge_string = '_bulge' if bulge_bool else ''\n",
+    "\n",
+    "    filename = f\"apogee_windows{stat_string}_bin{n_bin}{bulge_string}{drawlims_string}\"\n",
+    "    print(filename)\n",
+    "    \n",
+    "    if save_bool:\n",
+    "        print(\"Saving in \",save_path)\n",
+    "        for fileformat in [\".png\",\".pdf\"]:\n",
+    "            plt.savefig(save_path+filename+fileformat,bbox_inches='tight', dpi=200)\n",
+    "            print(fileformat)\n",
+    "\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "8.2-3.5,8.2+3.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[\"d\"].min(),data[\"d\"].max()"
    ]
   },
   {
